--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,5 @@
-
+@import './base/settings';
+@import './base/base';
+@import './components/auth';
+@import './components/buttons';
+@import './components/links';
