--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -11,3 +11,27 @@ padding-left: 10px;
 padding-right: 10px;
 width: 450px;
 }
+
+.journal__sidebar-navbar{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.journal__sidebar-navbar h3{
+    font-weight: lighter;
+}
+
+.journal__new-entry{
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 30px;
+    width: 100%;
+
+    &:hover{
+        color: darken(white, 20%);
+    }
+}
