--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -5,11 +5,14 @@
   cursor: pointer;
   font-size: 12px;
   padding: 7px 10px;
+
+  transition: color 0.3s ease;
+
   &:focus {
     outline: none;
   }
   &:hover {
-    background-color: darken($primary, 10%);
+    color: darken($primary, 10%);
   }
 }
 
