--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,6 +13,17 @@ main {
   width: 100%;
 }
 
+textarea {
+  outline: none;
+
+  &:focus {
+    outline: none;
+  }
+  &:focus-visible {
+    outline: none;
+  }
+}
+
 .mt-1 {
   margin-top: 5px;
 }
